@@ -87,6 +87,7 @@ Miscellaneous
 - in LP, use absolute instead of relative tolerances to check whether solutions from LP solver are primal feasible
 - when a restart occurs, SCIP now asserts (during EXITSOLVE) that all relaxation-only variables are unlocked and
   only captured by the transformed problem.
+- Avoid redundant calls to LP solver when LP is already flushed and solved
 
 Known bugs
 ----------
